--- a/nytaxi/arctern_nytaxi_bootcamp.ipynb
+++ b/nytaxi/arctern_nytaxi_bootcamp.ipynb
@@ -62,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c624cd6ae85948b998d91f2de71c4357",
+       "model_id": "42fe5f7fdca44fe4a7ad6334eb2ea8f6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -78,10 +78,11 @@
    ],
    "source": [
     "import arctern\n",
+    "from arctern import GeoSeries\n",
     "from keplergl import KeplerGl\n",
     "\n",
-    "pickup_points = arctern.ST_Point(nyc_df.pickup_longitude,nyc_df.pickup_latitude)\n",
-    "KeplerGl(data={\"pickup_points\": pd.DataFrame(data={'pickup_points':arctern.ST_AsText(pickup_points)})})"
+    "pickup_points = GeoSeries.point(nyc_df.pickup_longitude,nyc_df.pickup_latitude)\n",
+    "KeplerGl(data={\"pickup_points\": pd.DataFrame(data={'pickup_points':pickup_points.to_wkt()})})"
    ]
   },
   {
@@ -138,8 +139,8 @@
     "nyc_zone=[json.dumps(shp) for shp in nyc_zone]\n",
     "# 使用 Arctern 读取数据\n",
     "nyc_zone_series=pd.Series(nyc_zone)\n",
-    "nyc_zone_arctern=arctern.ST_GeomFromGeoJSON(nyc_zone_series)\n",
-    "arctern.ST_AsText(nyc_zone_arctern)"
+    "nyc_zone_arctern=GeoSeries.geom_from_geojson(nyc_zone_series)\n",
+    "nyc_zone_arctern.to_wkt()"
    ]
   },
   {
@@ -181,8 +182,9 @@
     "ident = Sridentify()\n",
     "ident.from_file('/tmp/taxi_zones/taxi_zones.prj')\n",
     "src_crs = ident.get_epsg()\n",
-    "nyc_arctern_4326 = arctern.ST_Transform(nyc_zone_arctern,f'EPSG:{src_crs}','EPSG:4326')\n",
-    "arctern.ST_AsText(nyc_arctern_4326)"
+    "nyc_zone_arctern.set_crs(f'EPSG:{src_crs}')\n",
+    "nyc_arctern_4326 = nyc_zone_arctern.to_crs(crs=\"EPSG:4326\")\n",
+    "nyc_arctern_4326.to_wkt()"
    ]
   },
   {
@@ -196,7 +198,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -209,7 +211,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "63073733ecc34e55bf9d3f2b007f0f33",
+       "model_id": "e148ca70f63f4fce9e2aa1e18a2a69cb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -223,7 +225,7 @@
     }
    ],
    "source": [
-    "KeplerGl(data={\"nyc_zones\": pd.DataFrame(data={'nyc_zones':arctern.ST_AsText(nyc_arctern_4326)})})"
+    "KeplerGl(data={\"nyc_zones\": pd.DataFrame(data={'nyc_zones':nyc_arctern_4326.to_wkt()})})"
    ]
   },
   {
@@ -239,8 +241,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "index_nyc = arctern.sjoin(pickup_points, nyc_arctern_4326, 'within')\n",
-    "is_in_nyc = index_nyc.map(lambda x: x >= 0)\n",
+    "index_nyc = arctern.within_which(pickup_points, nyc_arctern_4326)\n",
+    "is_in_nyc = index_nyc.map(lambda x: x  is not pd.NA )\n",
     "pickup_in_nyc = pickup_points[pd.Series(is_in_nyc)]"
    ]
   },
@@ -266,7 +268,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9b62daa4b1c49cdac87c36696e7aba5",
+       "model_id": "c8cfe17aff75439fb0205869353ee64e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -281,7 +283,7 @@
     }
    ],
    "source": [
-    "KeplerGl(data={\"pickup_points\": pd.DataFrame(data={'pickup_points':arctern.ST_AsText(pickup_in_nyc)})})"
+    "KeplerGl(data={\"pickup_points\": pd.DataFrame(data={'pickup_points':pickup_in_nyc.to_wkt()})})"
    ]
   },
   {
@@ -293,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +308,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00e2b517c3fb4991930054ea9f903b9b",
+       "model_id": "f3cf31438b544db8949c33ab9627f441",
        "version_major": 2,
        "version_minor": 0
       },
@@ -321,11 +323,11 @@
     }
    ],
    "source": [
-    "dropoff_points = arctern.ST_Point(nyc_df.dropoff_longitude,nyc_df.dropoff_latitude)\n",
-    "index_nyc = arctern.sjoin(dropoff_points, nyc_arctern_4326, 'within')\n",
-    "is_dorpoff_in_nyc = index_nyc.map(lambda x: x >= 0)\n",
+    "dropoff_points = GeoSeries.point(nyc_df.dropoff_longitude,nyc_df.dropoff_latitude)\n",
+    "index_nyc = arctern.within_which(dropoff_points, nyc_arctern_4326)\n",
+    "is_dorpoff_in_nyc = index_nyc.map(lambda x: x is not pd.NA)\n",
     "dropoff_in_nyc=dropoff_points[is_dorpoff_in_nyc]\n",
-    "KeplerGl(data={\"drop_points\": pd.DataFrame(data={'drop_points':arctern.ST_AsText(dropoff_in_nyc)})})"
+    "KeplerGl(data={\"drop_points\": pd.DataFrame(data={'drop_points':dropoff_in_nyc.to_wkt()})})"
    ]
   },
   {
@@ -337,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -354,14 +356,13 @@
        "Name: fare_amount, dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "is_resonable = [is_dorpoff_in_nyc[idx] & is_in_nyc[idx] for idx in range(0,len(is_in_nyc)) ]\n",
-    "in_nyc_df=nyc_df[pd.Series(is_resonable)]\n",
+    "in_nyc_df=nyc_df[is_in_nyc & is_dorpoff_in_nyc]\n",
     "in_nyc_df.fare_amount.describe()"
    ]
   },
@@ -370,6 +371,110 @@
    "metadata": {},
    "source": [
     "根据纽约市轮廓图对租车数据过滤后，我们发现很多上车点的位置和道路有一些偏差，甚至偏离到某些建筑物内："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fe00fe962b08496897d14abaf98bdcc2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "KeplerGl(config={'version': 'v1', 'config': {'visState': {'filters': [], 'layers': [{'id': '0cbr95h', 'type': …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "with open(\"/tmp/map_config.json\", \"r\") as f:\n",
+    "    config = json.load(f)\n",
+    "KeplerGl(data={\"projectioned_point\": pd.DataFrame(data={'projectioned_point':pickup_in_nyc.to_wkt()})},config=config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "我们认为离道路较远的数据同样为噪点（默认离道路距离大于 100m 视为较远），通过匹配纽约市的道路网将偏离道路较远的租车数据过滤掉，首先加载纽约市道路网："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import arctern\n",
+    "nyc_road=pd.read_csv(\"/tmp/nyc_road.csv\", dtype={\"roads\":\"string\"}, delimiter='|')\n",
+    "roads=GeoSeries(nyc_road.roads)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "然后根据纽约市的道路网对上车点和下车点进行过滤："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickup_points = GeoSeries.point(in_nyc_df.pickup_longitude,in_nyc_df.pickup_latitude)\n",
+    "pickup_points.set_axis(in_nyc_df.index,inplace=True)\n",
+    "dropoff_points = GeoSeries.point(in_nyc_df.dropoff_longitude,in_nyc_df.dropoff_latitude)\n",
+    "dropoff_points.set_axis(in_nyc_df.index,inplace=True)\n",
+    "\n",
+    "is_pickup_near_road = arctern.near_road(roads, pickup_points)\n",
+    "is_dropoff_near_road = arctern.near_road(roads, dropoff_points)\n",
+    "\n",
+    "is_near_road = is_pickup_near_road & is_dropoff_near_road\n",
+    "\n",
+    "on_road_nyc_df = in_nyc_df[is_near_road]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "过滤到距离道路较远的租车数据之后，我们将上车点绑定到最近的道路上，生成新的上车点："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickup_points = GeoSeries.point(on_road_nyc_df.pickup_longitude,on_road_nyc_df.pickup_latitude)\n",
+    "pickup_points.set_axis(on_road_nyc_df.index,inplace=True)\n",
+    "projectioned_pickup = arctern.nearest_location_on_road(roads, pickup_points)\n",
+    "projectioned_pickup = GeoSeries(projectioned_pickup)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "绘制出数据绑定道路后的上车点："
    ]
   },
   {
@@ -387,7 +492,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7cd7df46afee4a928d2e0d4aac2870bb",
+       "model_id": "ddbe3d9d117745f8aff205ccd955ad52",
        "version_major": 2,
        "version_minor": 0
       },
@@ -400,105 +505,7 @@
     }
    ],
    "source": [
-    "import json\n",
-    "with open(\"/tmp/map_config.json\", \"r\") as f:\n",
-    "    config = json.load(f)\n",
-    "KeplerGl(data={\"projectioned_point\": pd.DataFrame(data={'projectioned_point':arctern.ST_AsText(pickup_in_nyc)})},config=config)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "我们认为离道路较远的数据同样为噪点（默认离道路距离大于 100m 视为较远），通过匹配纽约市的道路网将偏离道路较远的租车数据过滤掉，首先加载纽约市道路网："
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import arctern\n",
-    "nyc_road=pd.read_csv(\"/tmp/nyc_road.csv\", dtype={\"roads\":\"string\"}, delimiter='|')\n",
-    "roads=arctern.ST_GeomFromText(nyc_road.roads)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "然后根据纽约市的道路网对上车点和下车点进行过滤："
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pickup_points = arctern.ST_Point(in_nyc_df.pickup_longitude,in_nyc_df.pickup_latitude)\n",
-    "dropoff_points = arctern.ST_Point(in_nyc_df.dropoff_longitude,in_nyc_df.dropoff_latitude)\n",
-    "is_pickup_near_road = arctern.near_road(roads, pickup_points)\n",
-    "is_dropoff_near_road = arctern.near_road(roads, dropoff_points)\n",
-    "is_resonable = [is_pickup_near_road[idx] & is_dropoff_near_road[idx] for idx in range(0,len(is_dropoff_near_road)) ]\n",
-    "in_nyc_df=in_nyc_df.reset_index()\n",
-    "on_road_nyc_df=in_nyc_df[pd.Series(is_resonable)]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "过滤到距离道路较远的租车数据之后，我们将上车点绑定到最近的道路上，生成新的上车点："
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pickup_points = arctern.ST_Point(on_road_nyc_df.pickup_longitude,on_road_nyc_df.pickup_latitude)\n",
-    "projectioned_pickup = arctern.nearest_location_on_road(roads, pickup_points)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "绘制出数据绑定道路后的上车点："
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae45b76c2fe0438c9f30cfd240e0c7fc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "KeplerGl(config={'version': 'v1', 'config': {'visState': {'filters': [], 'layers': [{'id': '0cbr95h', 'type': …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "KeplerGl(data={\"projectioned_point\": pd.DataFrame(data={'projectioned_point':arctern.ST_AsText(projectioned_pickup)})},config=config)"
+    "KeplerGl(data={\"projectioned_point\": pd.DataFrame(data={'projectioned_point':projectioned_pickup.to_wkt()})},config=config)"
    ]
   },
   {
@@ -510,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +530,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a2c84075ceeb4fda81201f63051c821c",
+       "model_id": "c16d66fc880f4350a7620f580c342411",
        "version_major": 2,
        "version_minor": 0
       },
@@ -536,9 +543,11 @@
     }
    ],
    "source": [
-    "dropoff_points = arctern.ST_Point(on_road_nyc_df.dropoff_longitude,on_road_nyc_df.dropoff_latitude)\n",
+    "dropoff_points = GeoSeries.point(on_road_nyc_df.dropoff_longitude,on_road_nyc_df.dropoff_latitude)\n",
+    "dropoff_points.set_axis(on_road_nyc_df.index,inplace=True)\n",
     "projectioned_dropoff = arctern.nearest_location_on_road(roads, dropoff_points)\n",
-    "KeplerGl(data={\"projectioned_point\": pd.DataFrame(data={'projectioned_point':arctern.ST_AsText(projectioned_dropoff)})},config=config)"
+    "projectioned_dropoff = GeoSeries(projectioned_dropoff)\n",
+    "KeplerGl(data={\"projectioned_point\": pd.DataFrame(data={'projectioned_point':projectioned_dropoff.to_wkt()})},config=config)"
    ]
   },
   {
@@ -550,15 +559,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count    194812.000000\n",
-       "mean          9.692408\n",
-       "std           6.976446\n",
+       "count    194786.000000\n",
+       "mean          9.692384\n",
+       "std           6.976573\n",
        "min           2.500000\n",
        "25%           5.700000\n",
        "50%           7.700000\n",
@@ -567,7 +576,7 @@
        "Name: fare_amount, dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -602,13 +611,13 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1131667d918d41029e682218d94be0dc",
+       "model_id": "2edc02562f434e03b8609a7011beb392",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "KeplerGl(data={'pickup':                                          pickup\n",
-       "0    POINT (-73.7581163154743 40.6749…"
+       "KeplerGl(data={'pickup':                                             pickup\n",
+       "1693    POINT (-73.9837884927911 4…"
       ]
      },
      "metadata": {},
@@ -617,8 +626,8 @@
    ],
    "source": [
     "fare_amount_gt_50 = on_road_nyc_df[on_road_nyc_df.fare_amount > 50]\n",
-    "KeplerGl(data={\"pickup\": pd.DataFrame(data={'pickup':arctern.ST_AsText(fare_amount_gt_50.pickup_on_road)}),\n",
-    "               \"dropoff\":pd.DataFrame(data={'dropoff':arctern.ST_AsText(fare_amount_gt_50.dropoff_on_road)})\n",
+    "KeplerGl(data={\"pickup\": pd.DataFrame(data={'pickup':fare_amount_gt_50.pickup_on_road.to_wkt()}),\n",
+    "               \"dropoff\":pd.DataFrame(data={'dropoff':fare_amount_gt_50.dropoff_on_road.to_wkt()})\n",
     "              })"
    ]
   },
@@ -631,31 +640,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count    194155.000000\n",
-       "mean       3114.627009\n",
-       "std        3233.474564\n",
+       "count    194786.000000\n",
+       "mean       3113.344497\n",
+       "std        3232.008220\n",
        "min           0.000000\n",
-       "25%        1224.656797\n",
-       "50%        2088.272336\n",
-       "75%        3733.545547\n",
+       "25%        1224.650347\n",
+       "50%        2087.753029\n",
+       "75%        3730.790193\n",
        "max       35418.698339\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nyc_distance=arctern.ST_DistanceSphere(on_road_nyc_df.pickup_on_road, on_road_nyc_df.dropoff_on_road)\n",
-    "nyc_distance.index=on_road_nyc_df.index\n",
+    "on_road_nyc_df.pickup_on_road.set_crs(\"EPSG:4326\")\n",
+    "on_road_nyc_df.dropoff_on_road.set_crs(\"EPSG:4326\")\n",
+    "nyc_distance=on_road_nyc_df.pickup_on_road.distance_sphere(on_road_nyc_df.dropoff_on_road)\n",
     "nyc_distance.describe()"
    ]
   },
@@ -668,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -681,13 +691,13 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9dc7efe2e5a4066a0e3e210768b3024",
+       "model_id": "e3116463c5dc45ebab6945bbaffb02ea",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "KeplerGl(data={'pickup':                                           pickup\n",
-       "0     POINT (-73.7814851559617 40.64…"
+       "KeplerGl(data={'pickup':                                             pickup\n",
+       "21      POINT (-73.7814851559617 4…"
       ]
      },
      "metadata": {},
@@ -701,8 +711,8 @@
     "                               })\n",
     "\n",
     "nyc_dist_gt = nyc_with_distance[nyc_with_distance.sphere_distance > 20e3]\n",
-    "KeplerGl(data={\"pickup\": pd.DataFrame(data={'pickup':arctern.ST_AsText(nyc_dist_gt.pickup)}),\n",
-    "               \"dropoff\":pd.DataFrame(data={'dropoff':arctern.ST_AsText(nyc_dist_gt.dropoff)})\n",
+    "KeplerGl(data={\"pickup\": pd.DataFrame(data={'pickup':nyc_dist_gt.pickup.to_wkt()}),\n",
+    "               \"dropoff\":pd.DataFrame(data={'dropoff':nyc_dist_gt.dropoff.to_wkt()})\n",
     "              })"
    ]
   }
