--- a/nytaxi_en/arctern_nytaxi_bootcamp.ipynb
+++ b/nytaxi_en/arctern_nytaxi_bootcamp.ipynb
@@ -242,7 +242,7 @@
    "outputs": [],
    "source": [
     "index_nyc = arctern.within_which(pickup_points, nyc_arctern_4326)\n",
-    "is_in_nyc = index_nyc.map(lambda x: x  is not pd.NA )\n",
+    "is_in_nyc = index_nyc.notna()\n",
     "pickup_in_nyc = pickup_points[pd.Series(is_in_nyc)]"
    ]
   },
@@ -325,7 +325,7 @@
    "source": [
     "dropoff_points = GeoSeries.point(nyc_df.dropoff_longitude,nyc_df.dropoff_latitude)\n",
     "index_nyc = arctern.within_which(dropoff_points, nyc_arctern_4326)\n",
-    "is_dorpoff_in_nyc = index_nyc.map(lambda x: x is not pd.NA)\n",
+    "is_dorpoff_in_nyc = index_nyc.notna()\n",
     "dropoff_in_nyc=dropoff_points[is_dorpoff_in_nyc]\n",
     "KeplerGl(data={\"drop_points\": pd.DataFrame(data={'drop_points':dropoff_in_nyc.to_wkt()})})"
    ]
